Fix range tooltip on iOS; closes #110

--- a/src/components/range/range.scss
+++ b/src/components/range/range.scss
@@ -147,7 +147,7 @@
   }
 }
 
-.range--focused .range__tooltip {
+.range--tooltip-visible .range__tooltip {
   opacity: 1;
 }
 
